# LioraXAI-backend

./: .gitignore  .gitmodules  PYTHONANYWHERE_DEPLOY.md  README.md  build.sh  deploy.sh  manage.py  pyproject.toml  pythonanywhere_wsgi.py  render.yaml  requirements.txt  run.sh  run_server.sh  run_with_poetry.sh  setup.sh
backup_before_rename_20250425_091100/nirdhar_app/: apps.py
backup_before_rename_20250425_091100/nirdhar_app/templates/: demo.html
backup_before_rename_20250425_091100/nirdhar_project/: settings.py
backup_before_rename_20250425_091100/website/: README.md
backup_before_rename_20250425_091100/website/docs/: about.html  blog.html  careers.html  contact.html  demo.html  features.html  pricing.html  privacy.html  services.html  (+2 more)
lioraxai_app/: admin.py  apps.py  context_processors.py  forms.py  models.py  urls.py  views.py
lioraxai_app/migrations/: 0001_initial.py
lioraxai_app/templates/: about.html  base_django.html  blog.html  blog_detail.html  careers.html  contact.html  contact1.html  contact_form.html  demo.html  demo_form.html  demo_request_form.html  features.html  index.html  pricing.html  privacy.html  services.html  subscribe_form.html  team.html  terms.html
lioraxai_app/templatetags/: form_tags.py
lioraxai_project/: asgi.py  settings.py  settings_production.py  settings_render.py  urls.py  wsgi.py
nirdhar_app/: admin.py  context_processors.py  forms.py  urls.py  views.py
nirdhar_app/templates/: base_django.html  contact_form.html  index.html  pricing.html
nirdhar_project/: asgi.py  settings_production.py  urls.py  wsgi.py
(+12 files in other folders)
