[project]
name = "lioraxai"
version = "0.1.0"
description = "LioraXAI backend"
authors = [
    {name = "Lioraxai Team"}
]
readme = "README.md"
requires-python = "^3.9"
dependencies = [
    "django (==4.2.20)",
    "django-crispy-forms (==2.0)",
    "python-dotenv (==1.0.0)",
    "gunicorn (==21.2.0)",
    "whitenoise (==6.6.0)",
    "pillow (==10.0.0)",
    "psycopg2-binary (==2.9.9)",
    "dj-database-url (==2.1.0)",
    "django-jazzmin (==2.6.0)"
]

[tool.poetry]
package-mode = false

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
